syntax = "proto3";

package auth;

option go_package = "tuzov.sso.v1;ssov1";

servise Auth {
    rpc Register (RegisterRequest) returns (RegisterResponce);
    rpc Login (LoginRequerst) returns (LoginResponce);
    rpc IsAdmin (IsAdminRequerst) returns (IsAdminResponce);
}

message RegisterRequest {
    string email = 1;   // Email of the user to register
    string password = 2; // Password of the user to register
}


message RegisterResponce {
    int64 user_id = 1; // User ID of the registered user
}

message LoginRequest {
    string email = 1;   // Email of the user to register
    string password = 2; // Password of the user to register
    int32 app_id = 3; // ID ot the app tologin to
}


message LoginResponce {
    string token = 1; // Auth token
}

message IsAdminRequerst {
    int64 user_id = 1; // User ID to validate
}


message IsAdminResponce {
    bool is_admin = 1; // Whether user is an admin
}